kmssink: Need get metas from original buffer.

Need get metas from original buffer.

https://bugzilla.gnome.org/show_bug.cgi?id=790473

Signed-off-by: Song Bing <bing.song@nxp.com>