sys/kms/gstkmssink.c
@@ -1585,7 +1585,7 @@ gst_kms_sink_show_frame (GstVideoSink * vsink, GstBuffer * buf)
     goto sync_frame;
   }
 
-  if ((crop = gst_buffer_get_video_crop_meta (buffer))) {
+  if ((crop = gst_buffer_get_video_crop_meta (buf))) {
     GstVideoInfo vinfo = self->vinfo;
     vinfo.width = crop->width;
     vinfo.height = crop->height;
